--- a/pages/setting.html
+++ b/pages/setting.html
@@ -22,15 +22,22 @@
                 </div>
             </header>
             <div class="content">
-                <p class="head-text">Your Canban Board</p>
+                <p class="head-text">Setting</p>
+                <div class="settings_box">
+                    <button>set #1</button>
+                    <button>set #2</button>
+                    <button>set #3</button>
+                    <button>set #4</button>
+                    <button>set #5</button>
+                </div>
             </div>
         </main>
         <header>
             <nav>
                 <a href="../index.html" alt="habit"><img src="../img/exercism-svgrepo-com.svg" alt=""></a>
-                <a href="trello.html" alt="trello-page" class="active"><img src="../img/trello-svgrepo-com.svg" alt=""></a>
+                <a href="trello.html" alt="trello-page"><img src="../img/trello-svgrepo-com.svg" alt=""></a>
                 <a href="character.html"><img src="../img/mask-happly-svgrepo-com.svg" alt=""></a>
-                <a href="setting.html"><img src="../img/setting-2-svgrepo-com.svg" alt=""></a>
+                <a href="setting.html" class="active"><img src="../img/setting-2-svgrepo-com.svg" alt=""></a>
             </nav>
         </header>
         <div class="user_page">
